--- a/package.json
+++ b/package.json
@@ -4,10 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^8.0.0",
+    "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
+    "eslint": "^4.1.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-import": "^2.6.1",
     "express": "^4.16.2",
+    "extract-loader": "^1.0.2",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.29.0",
     "lodash": "^4.17.5",
+    "node-sass": "^4.5.3",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.0.6",
     "randomcolor": "^0.5.3",
+    "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
+    "style-loader": "^0.20.1",
     "victor": "^1.1.0"
   }
 }
